<resources>
    <string name="app_name">Check in for work</string>
    <string name="btn_login">เข้าสู่ระบบ</string>
    <string name="tv_name">ชื่อ : </string>
    <string name="btn_checkin">บันทึกเข้างาน</string>
    <string name="btn_checkout">บันทึกออกงาน</string>
    <string name="btn_leave">บันทึกการลางาน</string>
    <string name="btn_schedule_exchange">แลกเปลี่ยนตารางงาน</string>
    <string name="btn_history">ประวัติการเข้า - ออกงาน</string>
    <string name="btn_check_leave">เช็คประวัติการลา</string>
    <string name="btn_logout">ออกจากระบบ</string>
    <string name="btn_save">บันทึก</string>
    <string name="tv_type_leave">ประเภทการลา</string>
    <string name="rad_ch1">ลาป่วย</string>
    <string name="rad_ch2">ลากิจ</string>
    <string name="rad_ch3">ลาพักร้อน</string>
    <string name="rad_ch4">อื่นๆ</string>
    <string name="tv_date_start">จากวันที่ : </string>
    <string name="tv_date_sum">จำนวนวัน : </string>
    <string name="tv_date_end">ถึงวันที่ : </string>
    <string name="btn_submit">ยื่นคำร้อง</string>
    <string name="btn_cancel">ยกเลิก</string>
    <string name="et_date_start">วันที่เริ่มต้น</string>
    <string name="et_date_end">วันที่สิ้นสุด</string>
    <string name="tv_save_succcess">ส่งคำร้อง\nของคุณแล้ว</string>
    <string name="btn_header_history">ประวัติการลางาน</string>
    <string name="tv_lbl_serch">ค้นหาจากเดือน :</string>
    <string name="et_month">เลือกเดือน</string>
    <string name="tv_lbl_desc">*** ข้อมูลสามารถดูย้อนหลังได้ 5 เดือนเท่านั้น  ***</string>
    <string name="btn_back">กลับ</string>
    <string name="btn_header_history_">ประวัติการ เข้า-ออก งานล่าสุด</string>
    <string name="tv_description">เหตุผลการลางาน</string>
    <string name="et_description_leave">คำอธิบาย</string>
    <string name="msgLoading">กำลังโหลดข้อมูล.......</string>
    <string name="msgLoginFail">เข้าสู่ระบบไม่สำเร็จ กรุณาลองใส่ Username หรือ  Password ใหม่อีกครั้ง</string>
    <string name="msgTitle">คำเตือน</string>
    <string name="tv_not_data">ไม่มีข้อมูล</string>
    <string name="tv_lbl_fname">ชื่อ :</string>
    <string name="tv_lbl_lname">นามสกุล :</string>
    <string name="et_hiht_lname">นามสกุล</string>
    <string name="et_hiht_fname">ชื่อ</string>
    <string name="tv_lbl_email">อีเมล :</string>
    <string name="et_hiht_email">อีเมล</string>
    <string name="tv_lbl_phone">โทรศัพท์ :</string>
    <string name="et_hiht_phone">โทรศัพท์</string>
    <string name="tv_lbl_address">ที่อยู่ :</string>
    <string name="et_hiht_address">ที่อยู่</string>
    <string name="tv_lbl_password">รหัสผ่าน : </string>
    <string name="et_hiht_password">รหัสผ่าน</string>
    <string name="tv_myqrcode">QR Code ของฉัน</string>
    <string name="btn_myqrcode">แสดง QR Code</string>
    <string name="tv_numleave">ลาไปแล้ว :</string>
    <string name="input_pin">กรุณาใส่ PIN</string>
    <string name="btn_addimg">เพิ่มรูปภาพ</string>
    <string name="btn_add_img">เลือกหลักฐาน</string>
    <string name="btn_takephoto">ถ่ายรูปภาพ</string>
    <string name="tv_lbl_name">ชื่อ : </string>
    <string name="tv_lbl_schedule">เวร :</string>
</resources>
