<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tv_lbl_fname"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_fname"
            android:paddingLeft="10dp"
            android:hint="@string/et_hiht_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:text="@string/tv_lbl_lname"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

       <EditText
           android:id="@+id/et_lname"
           android:paddingLeft="10dp"
           android:hint="@string/et_hiht_lname"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:text="@string/tv_lbl_email"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_email"
            android:paddingLeft="10dp"
            android:hint="@string/et_hiht_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:text="@string/tv_lbl_phone"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_phone"
            android:paddingLeft="10dp"
            android:hint="@string/et_hiht_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:text="@string/tv_lbl_address"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_address"
            android:paddingLeft="10dp"
            android:hint="@string/et_hiht_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:paddingRight="10dp"
            android:text="@string/tv_lbl_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password"
            android:paddingLeft="10dp"
            android:hint="@string/et_hiht_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_submit"
            android:textColor="#FFF"
            android:backgroundTint="@color/bootstrap_brand_success"
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_cancel"
            android:textColor="#FFF"
            android:backgroundTint="@color/bootstrap_brand_danger"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>